Fix [Projects] Align the color of Create New button in projects > default (#1148)

--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -100,7 +100,7 @@
           }
 
           &.create-new-menu {
-            background-color: $malibu;
+            background-color: $brightTurquoise;
             border: none;
 
             .select {
